[package]
name = "wasi-provider"
version = "0.1.0"
authors = [
    "Matt Butcher <matt.butcher@microsoft.com>",
    "Matthew Fisher <matt.fisher@microsoft.com>",
    "Radu Matei <radu.matei@microsoft.com>",
    "Taylor Thomas <taylor.thomas@microsoft.com>",
    "Brian Ketelsen <Brian.Ketelsen@microsoft.com>",
    "Brian Hardock <Brian.Hardock@microsoft.com>",
    "Ryan Levick <rylevick@microsoft.com>",
]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.24"
kube =  "0.29.0" 
log = "0.4"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime" }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" }
wasi-common = { git = "https://github.com/bytecodealliance/wasmtime" }
tempfile = "3.1"
kubelet = { path = "../kubelet", version = "0.1.0" }
wat = "1.0"
tokio = { version = "0.2.13", features = ["fs", "stream", "macros", "io-util", "sync"] }
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_17"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
k8s-openapi = { version = "0.7.1", features = ["v1_17"] }
